Creado mediante Colaboratory

--- a/Desnutrición_e_inseguridad_alimentaria.ipynb
+++ b/Desnutrición_e_inseguridad_alimentaria.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/aXoTlW+5D5njpd+jKOSv",
+      "authorship_tag": "ABX9TyOAfKsLVj+rnHgvJpjQvf5e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Librerias\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import seaborn as sns"
@@ -36,16 +37,16 @@
       "metadata": {
         "id": "sAahzKgx4RYT"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Se importan los datos directamente desde el repositorio de Github\n",
+        "Indicators = pd.read_csv('https://raw.githubusercontent.com/AlejandroGutie/SeminarioME03G04/main/Indicadoresdesnutricioneinseguridadalimentaria.csv')\n",
         "\n",
-        "Indicators = pd.read_csv('https://raw.githubusercontent.com/AlejandroGutie/seminario/main/Indicadores%20desnutricion%20e%20inseguridad%20alimentaria.csv')\n",
-        "\n",
-        "# Ahora puedes trabajar con los datos en el DataFrame 'data'\n",
+        "# Visualización del conjunto de datos\n",
         "Indicators\n"
       ],
       "metadata": {
@@ -54,9 +55,9 @@
           "height": 1000
         },
         "id": "EA6KyMhZ6FBR",
-        "outputId": "003f6368-8f9e-4808-e28d-743cdf05c3da"
+        "outputId": "c8ce44ee-5729-4600-df61-76f5eb2b9d47"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +158,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4376e712-eb8c-4b84-819f-96e9daa24653\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5a017166-c0db-42f8-8cd4-dce68ead02ea\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -435,7 +436,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4376e712-eb8c-4b84-819f-96e9daa24653')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5a017166-c0db-42f8-8cd4-dce68ead02ea')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -487,12 +488,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4376e712-eb8c-4b84-819f-96e9daa24653 button.colab-df-convert');\n",
+              "        document.querySelector('#df-5a017166-c0db-42f8-8cd4-dce68ead02ea button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4376e712-eb8c-4b84-819f-96e9daa24653');\n",
+              "        const element = document.querySelector('#df-5a017166-c0db-42f8-8cd4-dce68ead02ea');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -512,8 +513,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-fbedf681-6a71-4032-8522-944c0a9529ab\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fbedf681-6a71-4032-8522-944c0a9529ab')\"\n",
+              "<div id=\"df-5fb85dac-a297-4334-ab07-a06f7a2b6328\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5fb85dac-a297-4334-ab07-a06f7a2b6328')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -632,7 +633,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-fbedf681-6a71-4032-8522-944c0a9529ab button');\n",
+              "        document.querySelector('#df-5fb85dac-a297-4334-ab07-a06f7a2b6328 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -643,13 +644,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# Visualizamos las variables contenidas en el conjunto de datos\n",
         "Indicators.info()\n"
       ],
       "metadata": {
@@ -657,9 +659,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NUmhe7g8pOK4",
-        "outputId": "0ca374cf-a728-4921-9644-0a03b548e943"
+        "outputId": "7f12824c-1d88-40bf-862b-cd77da121848"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -697,7 +699,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualización con mapa de calor de los datos perdidos para las variables\n",
+        "# Visualización con mapa de calor de los datos perdidos para las variables contenidas en el conjunto de datos\n",
         "sns.heatmap(Indicators.isnull())"
       ],
       "metadata": {
@@ -706,9 +708,9 @@
           "height": 567
         },
         "id": "JbSlb-vUAWJI",
-        "outputId": "eaa8d0fc-fc46-4c8d-ff9b-bb8169c8d576"
+        "outputId": "0a629c55-3f9c-4aee-c8fa-54f4fe6a7808"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -718,7 +720,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -735,6 +737,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Visualizamos una descripción de las variables numéricas contenidas en el conjunto de datos\n",
         "Indicators.describe()"
       ],
       "metadata": {
@@ -743,9 +746,9 @@
           "height": 300
         },
         "id": "YeH1ItEBsKiu",
-        "outputId": "f72e9e8d-68e7-4d1a-fc97-ec0bfd91c692"
+        "outputId": "f444fe41-8691-465e-9fd4-6c24ac2f3159"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -773,7 +776,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-12b07416-cafe-43d5-b52e-0239947bc6c7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-743769dc-0e00-439d-9f9f-6978b7139c75\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -888,7 +891,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-12b07416-cafe-43d5-b52e-0239947bc6c7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-743769dc-0e00-439d-9f9f-6978b7139c75')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -940,12 +943,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-12b07416-cafe-43d5-b52e-0239947bc6c7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-743769dc-0e00-439d-9f9f-6978b7139c75 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-12b07416-cafe-43d5-b52e-0239947bc6c7');\n",
+              "        const element = document.querySelector('#df-743769dc-0e00-439d-9f9f-6978b7139c75');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -965,8 +968,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-d925f792-4492-4ad8-ace7-5ad38353a207\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d925f792-4492-4ad8-ace7-5ad38353a207')\"\n",
+              "<div id=\"df-e0ba7325-51a4-4a4a-b6a0-8b7ec10ad604\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e0ba7325-51a4-4a4a-b6a0-8b7ec10ad604')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1085,7 +1088,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-d925f792-4492-4ad8-ace7-5ad38353a207 button');\n",
+              "        document.querySelector('#df-e0ba7325-51a4-4a4a-b6a0-8b7ec10ad604 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1096,7 +1099,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 10
         }
       ]
     }
