Creado mediante Colaboratory

--- a/Desnutrición_e_inseguridad_alimentaria.ipynb
+++ b/Desnutrición_e_inseguridad_alimentaria.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOAfKsLVj+rnHgvJpjQvf5e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,8 +22,23 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AlejandroGutie/SeminarioME03G04/blob/main/Desnutrici%C3%B3n_e_inseguridad_alimentaria.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AlejandroGutie/SeminarioME03G04/blob/main_1/Desnutrici%C3%B3n_e_inseguridad_alimentaria.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Seminario de Analítica y Ciencia de Datos\n",
+        "### Momento Evaluativo 03\n",
+        "## _Aplicación de Ciencia de datos sobre la desnutrición e inseguridad alimentaria en los municipios de Antioquia en el marco del segundo Objetivo de Desarrollo Sostenible, 2013 - 2022_\n",
+        "\n",
+        "**Grupo 04**\\\n",
+        "Huberth Rolando Hincapié Arango\\\n",
+        "Yeisson Alejandro Gutiérrez Cano"
+      ],
+      "metadata": {
+        "id": "CRiHTcNN1Tw1"
+      }
     },
     {
       "cell_type": "code",
@@ -37,7 +51,7 @@
       "metadata": {
         "id": "sAahzKgx4RYT"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -57,7 +71,7 @@
         "id": "EA6KyMhZ6FBR",
         "outputId": "c8ce44ee-5729-4600-df61-76f5eb2b9d47"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -661,7 +675,7 @@
         "id": "NUmhe7g8pOK4",
         "outputId": "7f12824c-1d88-40bf-862b-cd77da121848"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,7 +724,7 @@
         "id": "JbSlb-vUAWJI",
         "outputId": "0a629c55-3f9c-4aee-c8fa-54f4fe6a7808"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,7 +762,7 @@
         "id": "YeH1ItEBsKiu",
         "outputId": "f444fe41-8691-465e-9fd4-6c24ac2f3159"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
